# extrachain-3rdparty

./: .gitignore  README.md  etalonium-libs.pri  extrachain-3rdparty.pri
BlurhashQt/: CMakeLists.txt  LICENSE  README.md  qmldir  qt-blurhash.pro
BlurhashQt/src/: blurhash.cpp  blurhash.h  blurhash_plugin.cpp  blurhash_plugin.h
HDiffPatch/: CMakeLists.txt
HDiffPatch/libdeflate/: libdeflate.h
HDiffPatch/libdeflate/lib/: bt_matchfinder.h  deflate_compress.c  ht_matchfinder.h  lib_common.h
HDiffPatch/libdeflate/programs/: gzip_compress_by_stream_mt.h  gzip_decompress_by_stream_mt.cpp  gzip_decompress_by_stream_mt.h  prog_util.c
HDiffPatch/lzma/C/: MtDec.h  Sha256.c
HDiffPatch/zlib/: inflate.c
HDiffPatch2/HDiffPatch/builds/android_ndk_jni_mk/java/com/github/sisong/: HPatch.java
HDiffPatch2/HDiffPatch/libHDiffPatch/HDiff/: diff.cpp  diff.h  diff_types.h
HDiffPatch2/HDiffPatch/libHDiffPatch/HPatch/: patch.c
HDiffPatch2/libdeflate/: README.md
HDiffPatch2/libdeflate/lib/: decompress_template.h  deflate_decompress.c  hc_matchfinder.h
HDiffPatch2/libdeflate/lib/arm/: cpu_features.h
HDiffPatch2/libdeflate/programs/: gzip_compress_by_stream_mt.cpp  pgzip.c  prog_util.h
HDiffPatch2/lzma/C/: 7zCrc.c  XzEnc.c  XzEnc.h
HDiffPatch2/zlib/: deflate.c  trees.c  trees.h  zlib.h
HDiffPatch2/zstd/lib/: zstd.h
HDiffPatch2/zstd/lib/compress/: zstd_compress.c  zstd_compress_internal.h
OpenSSL/: openssl.pri
QZXing/: CMakeLists.txt  QZXing-components.pri
SortFilterProxyModel/: CMakeLists.txt  SortFilterProxyModel.cmake  SortFilterProxyModel.pri  qqmlsortfilterproxymodel.h
SortFilterProxyModel/filters/: filter.h  rolefilter.h
asyncfuture/: CMakeLists.txt  asyncfuture.h
boolinq/: LICENSE  boolinq.h
gmp/windows/x64/: gmp.h
libsodium/: libsodium.pri  sodium.cmake
libsodium/include/: sodium.h
sqlite/: sqlite.cmake
statusbar/: statusbar.cmake  statusbar.pri  statusbar_android.cpp
wasm3/: CMakeLists.txt
